@@ -46,6 +46,7 @@ wxMSW:
 - Fix handling of selected images in wxBitmapButton (Artur Wieczorek).
 - Fix loading of bitmap with non-pre-multiplied alpha (Artur Wieczorek).
 - Support multiline strings in wxDC::DrawRotatedText() (Artur Wieczorek).
+- Fix stretchable spacers in vertical toolbars (Artur Wieczorek).
 
 wxOSX/Cocoa:
 
